<package>
  <name>hrpsys_choreonoid</name>
  <version>0.0.0</version>
  <description>choreonoid for hrpsys ros bridge
  </description>

  <license>EPL</license>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <!--url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys</build_depend>
  <build_depend version_gte="3.1.8">openhrp3</build_depend>
  <build_depend>choreonoid</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>openrtm_aist</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>hrpsys</run_depend>
  <run_depend>openhrp3</run_depend>
  <run_depend>choreonoid</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>openrtm_aist</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <export>
  </export>
</package>
